# watermark-fortress

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serve_api.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  repo-health.yml
adversary/: __init__.py  attack_suite.py
apps/api/: Dockerfile
apps/api/app/: main.py  schemas.py
apps/web/: Dockerfile  package.json
apps/web/src/: App.css  App.tsx
benchmark/: __init__.py  sweep.py
data/: demo_corpus.jsonl
docs/: architecture.md  audit.md  problem-brief.md
notebooks/: analysis.ipynb
results/: benchmark_summary.json
src/watermark_fortress/: __init__.py
src/watermark_fortress/analysis/: __init__.py  attacks.py  defense_metrics.py
src/watermark_fortress/core/: __init__.py  adaptive_watermark.py  channels.py  controller.py  models.py
tests/: test_api.py  test_core.py  web_smoke.py
